@@ -1,3 +1,10 @@
+parmap (1.4.0.9000)
+
+  * Feature: Add progress bar to parmap.starmap if tqdm is installed
+  * Fix: parmap.starmap_async was not passing the callback properly
+
+ -- Sergio Oller <sergioller@gmail.com>  Sun, 17 Sep 2017 11:26:09 +0200
+
 parmap (1.4.0)
 
   * Feature: Add progress bar to parmap.map if tqdm is installed
